[gd_scene load_steps=8 format=3 uid="uid://be1k25cx46lxo"]

[ext_resource type="Script" uid="uid://bf26qmpmlw17r" path="res://Player/player.gd" id="1_3qydi"]
[ext_resource type="PackedScene" uid="uid://co5s7037hupeh" path="res://Player/dash.tscn" id="3_tok1r"]
[ext_resource type="PackedScene" uid="uid://dntcr487ilb6w" path="res://Player/crouch.tscn" id="4_8g4oa"]
[ext_resource type="PackedScene" uid="uid://bedml0okde3l1" path="res://Player/rig.tscn" id="4_ddoul"]
[ext_resource type="PackedScene" uid="uid://b1veppx83glta" path="res://Player/jump.tscn" id="5_8g4oa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tok1r"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_3qydi"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3qydi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tok1r")

[node name="HorizontalPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="CameraArm" type="SpringArm3D" parent="HorizontalPivot/VerticalPivot"]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_3qydi")
spring_length = 9.0
margin = 2.0

[node name="Camera3D" type="Camera3D" parent="HorizontalPivot/VerticalPivot/CameraArm"]

[node name="Dash" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_tok1r")]
player = NodePath("..")

[node name="RigPivot" type="Node3D" parent="."]

[node name="Rig" parent="RigPivot" instance=ExtResource("4_ddoul")]

[node name="Crouch" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_8g4oa")]
player = NodePath("..")

[node name="Jump" parent="." node_paths=PackedStringArray("player") instance=ExtResource("5_8g4oa")]
player = NodePath("..")
extra_jumps = 99

[editable path="RigPivot/Rig"]
